@@ -1,3 +1,10 @@
+2000-07-21  Frank Ch. Eigler  <fche@redhat.com>
+
+	* example/Makefile.am (SUBDIRS): Remove to prevent automatic recursion
+	into `calc'.
+	(all-local): Add at least `calc' building back.
+	* example/Makefile.in: Regenerated.
+
 Fri Jul 21 16:01:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From 2000-04-25 Felix Lee <flee@cygnus.com>:
